responsive y arreglos hecho

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 <body>
         <header>
             <div class="logo">
-                <img src="img/logo.png" alt="LOGO">
+                <img src="img/logoo.png" alt="LOGO">
                 <h2>Logical Pulse</h2>
             </div>
             <nav>
@@ -66,7 +66,7 @@
         <div id="contact" class="contact">
             <h1>Contact us</h1>
             <div class="border">
-            <img src="img/logo.png" alt="logo">
+            <img src="img/logoo.png" alt="logo">
             <form action="" method="post">
             <input type="text" name="Nombre" placeholder="Nombre y apellido">
             <input type="text" name="Correo" placeholder="Correo electronico">
