--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
             <h1>Contact us</h1>
             <div class="border">
             <img src="img/logoo.png" alt="logo">
-            <form action="" method="post">
+            <form action="https://formspree.io/f/mnqebndw" method="post">
             <input type="text" name="Nombre" placeholder="Nombre y apellido">
             <input type="text" name="Correo" placeholder="Correo electronico">
             <textarea name="Mensaje" id="msj" cols="30" rows="10" placeholder="Mensaje"></textarea>
